namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kuard
  namespace: kuard
  labels:
    istio-injection: enabled
