kuard-purple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kuard
    version: purple
  name: kuard-purple
  namespace: kuard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuard
      version: purple
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kuard
        version: purple
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:purple
        name: kuar-amd64
        ports:
        - containerPort: 8080
        resources: {}
