destination-lb.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kuard-dr
  namespace: kuard
spec:
  host: kuard
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
  - labels:
      version: blue
    name: kuard-blue
  - labels:
      version: green
    name: kuard-green
