kuard-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kuard-gw
  namespace: istio-system
spec:
  host: kuard-gw.apps.example.com
  port:
    targetPort: http2
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
